--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,60 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>pt.ist</groupId>
-        <artifactId>bennu-project</artifactId>
-        <version>1.1.0</version>
-    </parent>
+	<parent>
+		<groupId>pt.ist</groupId>
+		<artifactId>fenix-framework-project</artifactId>
+		<version>1.1.0-SNAPSHOT</version>
+		<relativePath></relativePath>
+	</parent>
 
-    <groupId>pt.ist</groupId>
-    <artifactId>messaging</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>messaging</name>
+	<artifactId>messaging</artifactId>
+	<version>1.2.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>messaging</name>
 
-    <scm>
-        <connection>scm:git:git@github.com:ist-dsi/messaging.git</connection>
-        <developerConnection>scm:git:git@github.com:ist-dsi/messaging.git</developerConnection>
-        <url>http://ist-dsi.github.io/messaging/</url>
-        <tag>HEAD</tag>
-    </scm>
+	<scm>
+		<connection>scm:git:git@github.com:ist-dsi/messaging.git</connection>
+		<developerConnection>scm:git:git@github.com:ist-dsi/messaging.git</developerConnection>
+		<url>http://ist-dsi.github.io/messaging/</url>
+		<tag>HEAD</tag>
+	</scm>
 
-    <properties>
-        <version.pt.ist.bennu.core>1.1.0</version.pt.ist.bennu.core>
-        <version.pt.ist.email.dispatch>1.1.0</version.pt.ist.email.dispatch>
-    </properties>
+	<properties>
+		<version.pt.ist.bennu.bennu.core>2.0.0-SNAPSHOT</version.pt.ist.bennu.bennu.core>
+		<version.pt.ist.bennu.bennu.scheduler>2.0.0-SNAPSHOT</version.pt.ist.bennu.bennu.scheduler>
+		<version.pt.ist.bennu.bennu.email>2.0.0-SNAPSHOT</version.pt.ist.bennu.bennu.email>
+		<version.pt.ist.bennu.bennu.legacy>2.0.0-SNAPSHOT</version.pt.ist.bennu.bennu.legacy>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>pt.ist</groupId>
-            <artifactId>bennu-core</artifactId>
-            <version>${version.pt.ist.bennu.core}</version>
-        </dependency>
-        <dependency>
-            <groupId>pt.ist</groupId>
-            <artifactId>email-dispatch</artifactId>
-            <version>${version.pt.ist.email.dispatch}</version>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>pt.ist.bennu</groupId>
+			<artifactId>bennu-core</artifactId>
+			<version>${version.pt.ist.bennu.bennu.core}</version>
+		</dependency>
+		<dependency>
+			<groupId>pt.ist.bennu</groupId>
+			<artifactId>bennu-legacy</artifactId>
+			<version>${version.pt.ist.bennu.bennu.legacy}</version>
+		</dependency>
+		<dependency>
+			<groupId>pt.ist.bennu</groupId>
+			<artifactId>bennu-email</artifactId>
+			<version>${version.pt.ist.bennu.bennu.email}</version>
+		</dependency>
+		<dependency>
+			<groupId>pt.ist.bennu</groupId>
+			<artifactId>bennu-scheduler</artifactId>
+			<version>${version.pt.ist.bennu.bennu.scheduler}</version>
+		</dependency>
+	</dependencies>
 
-    <repositories>
-        <repository>
-            <id>fenix-ashes-maven-repository</id>
-            <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
-        </repository>
-    </repositories>
+	<repositories>
+		<repository>
+			<id>fenix-ashes-maven-repository</id>
+			<url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
+		</repository>
+	</repositories>
 </project>
